--- a/index1.html
+++ b/index1.html
@@ -3,10 +3,10 @@
   <meta charset="UTF-8" />
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet"  href="./dist/styles.css"/>
+  <!-- <link rel="stylesheet"  href="./dist/styles.css"/> -->
   <script src=""></script>
   <body>
     <h1>webpack</h1>
-    <script src="./dist/mybundle.js"></script>
+    <!-- <script src="./dist/mybundle.js"></script> -->
   </body>
 </html>
